crates/alder-parse/src/snapshots/alder_parse__query__tests__select_where_pin_nested_query_restores_mode.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.id in ^(query { select { id } from admins }) && users.role in ^roles }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 111,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 109,
                            },
                        },
                        value: BinOps {
                            operands: [
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 35,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 43,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 35,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 40,
                                                    },
                                                },
                                                value: Var(
                                                    "users",
                                                ),
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 41,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 43,
                                                    },
                                                },
                                                value: "id",
                                            },
                                        },
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 44,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 46,
                                            },
                                        },
                                        value: In,
                                    },
                                },
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 47,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 84,
                                            },
                                        },
                                        value: Pin(
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 49,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 84,
                                                    },
                                                },
                                                value: Query(
                                                    Select(
                                                        Select {
                                                            projection: Fields(
                                                                [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 1,
                                                                                column: 66,
                                                                            },
                                                                            end: Position {
                                                                                line: 1,
                                                                                column: 68,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "id",
                                                                        ),
                                                                    },
                                                                ],
                                                            ),
                                                            from: TableRef {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 1,
                                                                            column: 76,
                                                                        },
                                                                        end: Position {
                                                                            line: 1,
                                                                            column: 82,
                                                                        },
                                                                    },
                                                                    value: "admins",
                                                                },
                                                                alias: None,
                                                            },
                                                            joins: [],
                                                            where_: None,
                                                            group_by: [],
                                                            order_by: [],
                                                            limit: None,
                                                            offset: None,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 86,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 88,
                                            },
                                        },
                                        value: And,
                                    },
                                },
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 89,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 99,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 89,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 94,
                                                    },
                                                },
                                                value: Var(
                                                    "users",
                                                ),
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 95,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 99,
                                                    },
                                                },
                                                value: "role",
                                            },
                                        },
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 100,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 102,
                                            },
                                        },
                                        value: In,
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 103,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 109,
                                    },
                                },
                                value: Pin(
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 104,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 109,
                                            },
                                        },
                                        value: Var(
                                            "roles",
                                        ),
                                    },
                                ),
                            },
                        },
                    },
                ),
                group_by: [],
                order_by: [],
                limit: None,
                offset: None,
            },
        ),
    ),
}
